--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>驯龙高手</title>
-  <link rel="stylesheet" href="myweb/css/index.css">
+  <link rel="stylesheet" href="css/index.css">
 </head>
 <body background="image/1.jpg" >
 <header>返回上一页</header>
