--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
   <link rel="stylesheet" href="css/index.css">
 </head>
 <body background="image/1.jpg" >
+<a href="https://saionjitsubaki.github.io/homework/432/index.html" >
 <header>返回上一页</header>
+</a>
 <h1>驯龙高手</h1>
 
 <table align="center" >
