--- a/web/plot.html
+++ b/web/plot.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>剧情</title>
+    <title>精彩片段</title>
     <link rel="stylesheet" href="../css/plot.css">
 </head>
 <body>
